# BGNR-Client

./: COPYING  INSTALL  README.md
beginnercoin/: COPYING  Makefile.am  README.md  configure.ac
beginnercoin/.tx/: config
beginnercoin/contrib/: README.md  beginnercoin-qt.pro  beginnercoind.bash-completion  tidy_datadir.sh
beginnercoin/doc/: Doxyfile  README_windows.txt  build-unix.md  coding.md  gitian-building.md
beginnercoin/share/: setup.nsi.in  ui.rc
beginnercoin/src/: Makefile.include  addrman.h  alert.cpp  allocators.h  base58.h  bignum.h  chainparams.h  checkpoints.h  coincontrol.h  core.h  crypter.cpp  hash.h  init.cpp  key.h  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  net.h  netbase.cpp  rpcblockchain.cpp  rpcnet.cpp  rpcserver.cpp  rpcserver.h  rpcwallet.cpp  script.cpp  script.h  serialize.h  txdb.h  txmempool.h  ui_interface.h  uint256.h  version.cpp  version.h  wallet.cpp  wallet.h  walletdb.cpp
beginnercoin/src/qt/: Makefile.am  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  beginnercoin.qrc  beginnercoinamountfield.cpp  beginnercoinamountfield.h  beginnercoingui.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  guiutil.cpp  intro.cpp  macnotificationhandler.mm  monitoreddatamapper.cpp  notificator.h  openuridialog.h  paymentrequest.proto  paymentrequestplus.cpp  paymentserver.cpp  paymentserver.h  receiverequestdialog.cpp  receiverequestdialog.h  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.h  sendcoinsentry.cpp  signverifymessagedialog.h  splashscreen.cpp  splashscreen.h  trafficgraphwidget.cpp  trafficgraphwidget.h  transactiondesc.cpp  transactiondesc.h  transactiondescdialog.cpp  (+9 more)
beginnercoin/src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsentry.ui
beginnercoin/src/qt/locale/: beginnercoin_ar.ts  beginnercoin_be_BY.ts  beginnercoin_bg.ts  beginnercoin_ca.ts  beginnercoin_ca_ES.ts  beginnercoin_cmn.ts  beginnercoin_cs.ts  beginnercoin_en.ts  beginnercoin_es.ts  beginnercoin_es_CL.ts  beginnercoin_fa_IR.ts  beginnercoin_fr.ts  beginnercoin_hu.ts  beginnercoin_la.ts  beginnercoin_lt.ts  beginnercoin_lv_LV.ts  beginnercoin_mn.ts  beginnercoin_ms_MY.ts  beginnercoin_nl.ts  beginnercoin_pam.ts  beginnercoin_pl.ts  beginnercoin_sah.ts  beginnercoin_sl_SI.ts  beginnercoin_sq.ts  beginnercoin_sr.ts  beginnercoin_sv.ts  beginnercoin_tr.ts  beginnercoin_ur_PK.ts  beginnercoin_vi_VN.ts  beginnercoin_zh_HK.ts  beginnercoin_zh_TW.ts
beginnercoin/src/qt/res/: beginnercoin-qt-res.rc
beginnercoin/src/qt/test/: Makefile.am  test_main.cpp
contrib/: qt_translations.py
contrib/bitrpc/: README.md
doc/: README.md  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
src/: Makefile.am  alert.h  allocators.cpp  base58.cpp  beginnercoin-cli-res.aps  beginnercoin-cli-res.rc  beginnercoin-cli.cpp  beginnercoind-res.aps  beginnercoind-res.rc  beginnercoind.cpp  bloom.cpp  bloom.h  chainparams.cpp  checkpoints.cpp  checkqueue.h  clientversion.h  coins.cpp  coins.h  compat.h  core.cpp  crypter.h  db.cpp  db.h  init.h  key.cpp  keystore.cpp  main.cpp  main.h  miner.cpp  miner.h  mruset.h  net.cpp  netbase.h  noui.cpp  noui.h  protocol.cpp  protocol.h  receiver.h  rpcclient.cpp  rpcclient.h  (+14 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_writer_template.h
src/m4/: beginnercoin_find_bdb48.m4
src/qt/: addressbookpage.cpp  addressbookpage.h  askpassphrasedialog.h  beginnercoin.cpp  beginnercoinaddressvalidator.cpp  beginnercoinaddressvalidator.h  beginnercoingui.cpp  beginnercoinstrings.cpp  beginnercoinunits.cpp  beginnercoinunits.h  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  editaddressdialog.h  guiconstants.h  guiutil.h  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  monitoreddatamapper.h  notificator.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequestplus.h  qvalidatedlineedit.cpp  qvalidatedlineedit.h  qvaluecombobox.cpp  qvaluecombobox.h  receivecoinsdialog.cpp  receivecoinsdialog.h  sendcoinsdialog.cpp  sendcoinsentry.h  signverifymessagedialog.cpp  transactionfilterproxy.cpp  (+11 more)
src/qt/forms/: coincontroldialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  signverifymessagedialog.ui
src/qt/locale/: beginnercoin_ach.ts  beginnercoin_af_ZA.ts  beginnercoin_bs.ts  beginnercoin_ca@valencia.ts  beginnercoin_cy.ts  beginnercoin_da.ts  beginnercoin_de.ts  beginnercoin_el_GR.ts  beginnercoin_eo.ts  beginnercoin_es_DO.ts  beginnercoin_es_MX.ts  beginnercoin_es_UY.ts  beginnercoin_et.ts  beginnercoin_eu_ES.ts  beginnercoin_fa.ts  beginnercoin_fi.ts  beginnercoin_fr_CA.ts  beginnercoin_gl.ts  beginnercoin_gu_IN.ts  beginnercoin_he.ts  beginnercoin_hi_IN.ts  beginnercoin_hr.ts  beginnercoin_id_ID.ts  beginnercoin_it.ts  beginnercoin_ja.ts  beginnercoin_ka.ts  beginnercoin_kk_KZ.ts  beginnercoin_ko_KR.ts  beginnercoin_ky.ts  beginnercoin_nb.ts  beginnercoin_pt_BR.ts  beginnercoin_pt_PT.ts  beginnercoin_ro_RO.ts  beginnercoin_ru.ts  beginnercoin_sk.ts  beginnercoin_th_TH.ts  beginnercoin_uk.ts  beginnercoin_uz@Cyrl.ts  beginnercoin_vi.ts  beginnercoin_zh_CN.ts
src/qt/res/icons/: beginnercoin.icns
src/qt/test/: uritests.cpp
src/test/: Makefile.am  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hmac_tests.cpp  key_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  test_beginnercoin.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md  sighash.json  tx_valid.json
(+134 files in other folders)
